<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.JobPreviewActivity"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:text="@string/preview_d"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="61dp" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jobCategory_d"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/dateHint_d" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:text="@string/areaHint_d" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/feeHint_d"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:text="@string/details_d"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvBudget"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/previejobHintDiscription_d"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button3_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="back"
        android:text="@string/btnBack_d" />
    <Button
        android:id="@+id/btnJobPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="nextToAllJobs"
        android:text="@string/postBtn_d" />

</LinearLayout>